fixed bug with directions distributing

--- a/table.html
+++ b/table.html
@@ -157,7 +157,7 @@
         cellConfig.direction = getRandomDirection([directions.RIGHT, directions.UP_AND_RIGHT, directions.DOWN_AND_RIGHT]);
     }
     function reflectFromRightBorder(cellConfig) {
-        cellConfig.direction = getRandomDirection([directions.LEFT, directions.UP_AND_LEFT, directions.DOWN_AND_RIGHT]);
+        cellConfig.direction = getRandomDirection([directions.LEFT, directions.UP_AND_LEFT, directions.DOWN_AND_LEFT]);
     }
 
     function getCellsConfig(table) {
